fix z-index of fixed buttons

--- a/src/components/App/main.css
+++ b/src/components/App/main.css
@@ -10,6 +10,8 @@ body {
 /* fixed buttons */
 .button-fixed {
     position: fixed;
+    /* need this because material-ui sets some elements' z-index to 1 */
+    z-index: 1;
     bottom: 23px;
     right: 23px;
 }
